# terra

./: .cirrus.yml  .clang-format  .gitignore  .gitlab-ci.yml  .luacheckrc  .travis.yml  CHANGES.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  GNUmakefile  LICENSE.txt  Makefile  Makefile.inc  README.html  README.md  STABILITY.md  TODO.txt  TerraForCPP.html  TerraForCPP.txt  _gen.lua  _terraforcpp.txt  api-reference.md  api.md  appveyor.yml  default.nix  demo.html  embeddinglanguages.html  embeddinglanguages.md  format.sh  gen.lua  getting-started.md  index.md  lib.nix  list.md  nix-cflags.patch  publications.md  shell.nix  terra-scm-1.rockspec  test.lua  (+2 more)
.github/workflows/: main.yml  nix.yml
_layouts/: post.html
cmake/Modules/: BuildDirs.cmake  ExtractLLVM.cmake  FindClang.cmake  FindLUAJIT.cmake  FindLuaJIT.cmake  GetLuaJIT.cmake  VersionNumber.cmake
docker/: .gitignore  Dockerfile.ubuntu  Dockerfile.ubuntu-notest  Dockerfile.ubuntu-prebuilt  Dockerfile.ubuntu-prebuilt-multiarch  Dockerfile.ubuntu-prebuilt-notest  Dockerfile.ubuntu-prebuilt-test  Dockerfile.ubuntu-source  Dockerfile.ubuntu-source-test  Dockerfile.ubuntu-test  Dockerfile.ubuntu-upstream  build.sh  compatibility_test.sh  generate.lua  install_cuda.sh  install_script.sh  install_script_multiarch.sh
dockerfiles/terra-bin/: Dockerfile
docs/: CNAME  Gemfile  Makefile  TerraForCPP.html  _config.yml  _gen.lua  _terraforcpp.txt  about.md  api.md  community.md  getting-started.md  index.md  list.md  raii.md  style.html  terraforcpp.html
docs/_layouts/: post.html
docs/stylesheets/: styles.css
javascripts/: lua.js  prism.js
lib/: raii.md  std.t  terraffi.t  terralibext.t
msvc/: Makefile  README.md  build.bat
msvc/ext/: setjmp.h
msvc/terra/: terra.props  terra.sln
msvc/terra/prebuild/: prebuild.vcxproj
msvc/terra/terraexe/: terraexe.vcxproj  terraexe.vcxproj.filters
msvc/terra/terralib/: terralib.vcxproj  terralib.vcxproj.filters
nix/: sources.json
release/: README.md
release/include/terra/: terra.h
release/share/terra/: README.md  parsing.t
src/: CMakeLists.txt  MSVCSetupAPI.h  asdl.lua  bin2c.c  cudalib.lua  dummy.c  genclanginternalizedheaders.lua  genclangpaths.lua  genclangpaths_win.lua  genheader.lua  geninternalizedfiles.lua  lctype.cpp  lctype.h  linenoise.cpp  linenoise.h  list.lua  lj_strscan.c  lj_strscan.h  llex.cpp  llex.h  llvmheaders.h  llvmheaders_100.h  llvmheaders_110.h  llvmheaders_130.h  llvmheaders_31.h  llvmheaders_32.h  llvmheaders_33.h  llvmheaders_34.h  llvmheaders_35.h  llvmheaders_36.h  llvmheaders_37.h  llvmheaders_38.h  llvmheaders_39.h  llvmheaders_50.h  llvmheaders_60.h  llvmheaders_70.h  llvmheaders_80.h  lobject.cpp  lobject.h  lparser.cpp  (+48 more)
stylesheets/: codemirror.css  prism.css  styles.css
tests/: .gitignore  abouttocompile.t  addlanguage1.t  addressspace.t  ainline.t  alignment.t  amdgpu_kernel.t  amdgpu_struct.t  and.t  annotatedstruct.t  anon.t  anon3.t  anonstruct.t  anonstruct2.t  antiquote1.t  antiquote2.t  antiquote3.t  antiquote4.t  antiquote5.t  arith.t  array.t  arraylit.t  arrayt.t  arrayt2.t  arrptr.t  asdlns.t  astype.t  asvalue_select.t  atomicrmw.t  avx512.t  avxhadd.t  baderror.t  badname.t  benchmark_dgemm.t  benchmark_fannkuchredux.c  benchmark_fannkuchredux.t  benchmark_nbody.c  benchmark_nbody.t  bf.t  blankexp.t  (+415 more)
tests/benchmarks/: bs.t  bs_eigen.cpp  dynfusion.t  fusion.t  makefile  raysphere.t  raysphere_eigen.cpp  timing.h
tests/disabled/: avxhadd.t  class2.t  class3.t  crash.t  fails_recvar3.t  leaktest.t  recvar.t  recvar2.t  sgemm.t  varinit.t  varinit2.t  varwithrecinit.t
tests/fails/: abouttofreeze.t  arith.t  atomicrmw.t  atomicrmw2.t  atomicrmw3.t  atomicrmw4.t  attrload.t  attrload2.t  attrload3.t  attrstore.t  attrstore2.t  cast.t  comparestruct.t  constructor.t  defer.t  defer1.t  defergoto.t  defergoto2.t  dupvar.t  entrieserror.t  escapeerr.t  escapemacro.t  f0.t  f1.t  f10.t  f11.t  f12.t  f13.t  f14.t  f15.t  f16.t  f17.t  f18.t  f19.t  f2.t  f20.t  f21.t  f22.t  f23.t  f24.t  (+92 more)
tests/lib/: addlanguage.t  barlang.t  def.t  embeddedcode.t  examplecompiler.t  examplelanguage.t  exampleparser.t  fakeimport.t  foolang.t  golike.t  javalike.t  javalike2.t  javalikesimple.t  leak.lua  matrixtestharness.t  objc.t  parsing.t  pratttest.t  prof.t  raii-integration.t  soa.t  std.t  sumlanguage.t  sumlanguage2.t  testlang.t  utils.t
tests/reference/: Makefile  benchmark_fannkuchredux.c  benchmark_nbody.c  matmul.cpp  matmuls.cpp
